--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         }
 
         img {
-            max-width: 100%;
+            max-width: 50%;
             height: auto;
         }
         .vertical-line {
@@ -369,7 +369,9 @@
 
         </tbody>
         </table>
-
+        R. Scheibler, T. Hasumi, Y. Fujita, T. Komatsu, R. Yamamoto, and K. Tachibana. Class-conditioned latent diffusion model for dcase 2023 foley sound synthesis challenge. Technical report, Tech. Rep., June, 2023.
+        Y. Yuan, H. Liu, X. Liu, X. Kang, M. D. Plumbley, and W. Wang. Latent diffusion model based foley sound generation system for dcase challenge 2023 task 7. arXiv preprint arXiv:2305.15905, 2023.
+        H. C. Chung, Y. Lee, and J. H. Jung. Foley sound synthesis based on gan using contrastive learning without label information. Technical report, Tech. Rep., June, 2023.
     </div>
 
 
