--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 		<div class="text-center">
 		<h1>EDMSound</h1>
 		<br>
-		<br>
+        <p>
+            <span><a href="https://github.com/AgentCooper2002/EDMsound">[Code Base]</a></span>
+            <span><a href="https://github.com/AgentCooper2002/EDMsound">[arxiv paper]</a></span>
+        </p>
+        <br>
 		</div>
 		<p>
 			<b>Abstract</b> 
@@ -244,7 +248,7 @@
         </tr>
 
         <tr>
-            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b>Scheibler et al</b></td>
+            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b><a href="#scheiblerref">Scheibler et al</a></b></td>
             <td style="text-align: center">
                 <div class="pair">
                     <img src="images/sb_67_gen.png" alt="Image 1">
@@ -306,7 +310,7 @@
         </tr>
 
         <tr>
-            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b>Jung et al</b></td>
+            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b><a href="#jungref">Jung et al</a></b></td>
             <td style="text-align: center">
                 <div class="pair">
                     <img src="images/jung_41_gen.png" alt="Image 1">
@@ -369,228 +373,12 @@
 
         </tbody>
         </table>
-        R. Scheibler, T. Hasumi, Y. Fujita, T. Komatsu, R. Yamamoto, and K. Tachibana. Class-conditioned latent diffusion model for dcase 2023 foley sound synthesis challenge. Technical report, Tech. Rep., June, 2023.<br>
-        Y. Yuan, H. Liu, X. Liu, X. Kang, M. D. Plumbley, and W. Wang. Latent diffusion model based foley sound generation system for dcase challenge 2023 task 7. arXiv preprint arXiv:2305.15905, 2023.<br>
-        H. C. Chung, Y. Lee, and J. H. Jung. Foley sound synthesis based on gan using contrastive learning without label information. Technical report, Tech. Rep., June, 2023.<br>
+        <p id="scheiblerref">[1] R. Scheibler, T. Hasumi, Y. Fujita, T. Komatsu, R. Yamamoto, and K. Tachibana. Class-conditioned latent diffusion model for dcase 2023 foley sound synthesis challenge. Technical report, Tech. Rep., June, 2023.</p><br>
+        <p id="jungref">[2] Y. Yuan, H. Liu, X. Liu, X. Kang, M. D. Plumbley, and W. Wang. Latent diffusion model based foley sound generation system for dcase challenge 2023 task 7. arXiv preprint arXiv:2305.15905, 2023.</p> <br>
+        [3] H. C. Chung, Y. Lee, and J. H. Jung. Foley sound synthesis based on gan using contrastive learning without label information. Technical report, Tech. Rep., June, 2023.<br>
     </div>
 
 
-
-
-        <!-- <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
-            <div class="pair">
-                <img src="images/edm_2_gen.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_2_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/edm_117_gen.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_117_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/edm_377_gen.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_377_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
-            <div class="pair">
-                <img src="images/edm_2_train.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_2_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/edm_117_train.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_117_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/edm_377_train.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/edm_377_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div> -->
-
-        <!-- <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-	<h3 id="evaluation results" style="text-align: center;">Matched Pairs from Scheibler et al Generation</h3>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
-            <div class="pair">
-                <img src="images/sb_67_gen.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_67_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/sb_214_gen.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_214_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/sb_600_gen.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_600_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
-            <div class="pair">
-                <img src="images/sb_67_train.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_67_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/sb_214_train.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_214_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/sb_600_train.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/sb_600_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div> -->
-
-        <!-- <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-	<h3 id="evaluation results" style="text-align: center;">Matched Pairs from Yi et al Generation</h3>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
-            <div class="pair">
-                <img src="images/yi_122_gen.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_122_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/yi_377_gen.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_377_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/yi_486_gen.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_486_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
-            <div class="pair">
-                <img src="images/yi_122_train.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_122_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/yi_377_train.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_377_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/yi_486_train.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/yi_486_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div> -->
-
-        <!-- <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-	<h3 id="evaluation results" style="text-align: center;">Matched Pairs from Jung et al Generation</h3>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
-            <div class="pair">
-                <img src="images/jung_41_gen.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/jung_41_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/jung_387_gen.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/jung_387_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/jung_580_gen.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios/copy_detection/jung_580_gen.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <h2 id="evaluation results" style="text-align: center;"> </h2>
-        <div class="row">
-            <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
-            <div class="pair">
-                <img src="images/jung_41_train.png" alt="Image 1">
-                <audio controls>
-                    <source src="audios/copy_detection/jung_41_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/jung_387_train.png" alt="Image 2">
-                <audio controls>
-                    <source src="audios/copy_detection/jung_387_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="pair">
-                <img src="images/jung_580_train.png" alt="Image 3">
-                <audio controls>
-                    <source src="audios//copy_detection/jung_580_train.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div> -->
                     
 </div>
 
