--- a/index.html
+++ b/index.html
@@ -310,6 +310,68 @@
         </tr>
 
         <tr>
+            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b>Yi et al</b></td>
+            <td style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_122_gen.png" alt="Image 1">
+                    <audio controls>
+                        <source src="audios/copy_detection/yi_122_gen.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+            <td style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_122_train.png" alt="Image 1">
+                    <audio controls>
+                        <source src="audios/copy_detection/yi_122_train.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_377_gen.png" alt="Image 2">
+                    <audio controls>
+                        <source src="audios/copy_detection/yi_377_gen.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+            <td style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_377_train.png" alt="Image 2">
+                    <audio controls>
+                        <source src="audios/copy_detection//yi_377_train.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="horizontal-line" style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_486_gen.png" alt="Image 3">
+                    <audio controls>
+                        <source src="audios/copy_detection/yi_486_gen.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+            <td class="horizontal-line" style="text-align: center">
+                <div class="pair">
+                    <img src="images/yi_486_train.png" alt="Image 3">
+                    <audio controls>
+                        <source src="audios/copy_detection/yi_486_train.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </td>
+        </tr>
+
+        <tr>
             <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b><a href="#jungref">Jung et al</a></b></td>
             <td style="text-align: center">
                 <div class="pair">
