--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </tr>
 
         <tr>
-            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b>Yi et al</b></td>
+            <td class="vertical-line" style="vertical-align: middle" rowspan="3" ><b><a href="#yiref">Yi et al</a></b></td>
             <td style="text-align: center">
                 <div class="pair">
                     <img src="images/yi_122_gen.png" alt="Image 1">
@@ -438,9 +438,11 @@
 
         <h2>References</h2>
 
-        <p id="scheiblerref">[1] R. Scheibler, T. Hasumi, Y. Fujita, T. Komatsu, R. Yamamoto, and K. Tachibana. Class-conditioned latent diffusion model for dcase 2023 foley sound synthesis challenge. Technical report, Tech. Rep., June, 2023.</p><br>
-        <p id="jungref">[2] Y. Yuan, H. Liu, X. Liu, X. Kang, M. D. Plumbley, and W. Wang. Latent diffusion model based foley sound generation system for dcase challenge 2023 task 7. arXiv preprint arXiv:2305.15905, 2023.</p> <br>
-        [3] H. C. Chung, Y. Lee, and J. H. Jung. Foley sound synthesis based on gan using contrastive learning without label information. Technical report, Tech. Rep., June, 2023.<br>
+        <p id="scheiblerref">[1] R. Scheibler, T. Hasumi, Y. Fujita, T. Komatsu, R. Yamamoto, and K. Tachibana. "Class-conditioned latent diffusion model for dcase 2023 foley sound synthesis challenge." Technical report, Tech. Rep., June, 2023.</p>
+        <p id="jungref">[2] Y. Yuan, H. Liu, X. Liu, X. Kang, M. D. Plumbley, and W. Wang. "Latent diffusion model based foley sound generation system for dcase challenge 2023 task 7." arXiv preprint arXiv:2305.15905, 2023.</p>
+        <p id="yiref">[3] H. C. Chung, Y. Lee, and J. H. Jung. "Foley sound synthesis based on gan using contrastive learning without label information." Technical report, Tech. Rep., June, 2023.</p>
+        <p>[4] Warden, Pete. "Speech commands: A dataset for limited-vocabulary speech recognition." arXiv preprint arXiv:1804.03209 (2018).</p>
+        <p>[5] Choi, Keunwoo, Jaekwon Im, Laurie Heller, Brian McFee, Keisuke Imoto, Yuki Okamoto, Mathieu Lagrange, and Shinosuke Takamichi. "Foley sound synthesis at the dcase 2023 challenge." arXiv preprint arXiv:2304.12521 (2023).</p>
     </div>
 
 
